# code-guru-ai

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
src/: main.py  settings.py
src/code_guru/: api_responses.py  controllers.py  dependencies.py  exceptions.py  interfaces.py  router.py  schemas.py  services.py  validators.py
src/code_guru/tests/: test_code_review_service.py  test_github_service.py  test_groq_ai_service.py  test_validators.py
src/database/: base.py
src/groq_ai/: api.py
